Chore: improved ConnectionPoolTransaction to use Concurrent maps and lists to avoid issues with multiple threads